<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_label_changelog">Changelog</string>
    <string name="about_label_contribute">Contribute</string>
    <string name="about_label_faq">FAQ</string>
    <string name="about_label_faq_long">Frequently asked questions</string>
    <string name="about_label_gnu">GNU License</string>
    <string name="about_label_license">License</string>
    <string name="about_label_main_developer">Main developer</string>
    <string name="about_label_original_app">Original App</string>
    <string name="about_label_original_author">Author of the original app</string>
    <string name="about_label_privacy_policy">Privacy Policy</string>
    <string name="about_label_source">Source code</string>
    <string name="about_label_version">Version</string>
    <string name="about_name_author1">Michal Olenčin (Alfavio)</string>
    <string name="about_name_author_original">Tibor Kaputa (tibbi)</string>
    <string name="about_tab_about">About</string>
    <string name="about_tab_libraries">Libraries</string>
    <string name="about_title_authors">Authors</string>
    <string name="aboutlibrary_lib_version">8.9.0</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="album">Album</string>
    <string name="altitude">Altitude</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="app_data_clear_confirmation_1">Tap again if you are sure you want to delete hidden files</string>
    <string name="app_data_clear_confirmation_2">Tap again if you know, that you will not be able to decrypt encrypted file with this app</string>
    <string name="app_data_clear_confirmation_3">Tap again if you are sure you want delete settings</string>
    <string name="app_data_clear_confirmation_4">Tap again to confirm app data delete</string>
    <string name="app_data_clear_summary">This will clear all your &lt;b>hidden files&lt;/b>, setting, cache, and other app data. Also you will be not able to &lt;b>decrypt&lt;/b> encrypted files, which are encrypted with this app.</string>
    <string name="app_data_clear_title">Clear app data</string>
    <string name="app_data_cleared">App data cleared</string>
    <string name="app_data_error">Error occurred when app data was deleting</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_launcher_name">Secure File</string>
    <string name="app_lock_info_summary">Biometric authentication is significantly less secure than a password. To improve the security of your files is recommended using only a password to restrict app access. But you can use both.</string>
    <string name="app_lock_summary_off">Lock app access is disabled</string>
    <string name="app_lock_summary_on">Lock app access is enabled</string>
    <string name="app_lock_summary_on_warning">Password or biometric authentication is not set</string>
    <string name="app_lock_summary_on_warning_biometric">Biometric authenticator is not specified or available</string>
    <string name="app_lock_title">Lock app access</string>
    <string name="app_name">Secure File Manager Beta</string>
    <string name="app_open_biometric_settings_summary">Biometric authenticator is not specified, click to open settings</string>
    <string name="app_system_settings">App system settings</string>
    <string name="app_unlocked_notification">App is unlocked. Tap to lock app.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append_filenames">Append filenames</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="artist">Artist</string>
    <string name="ascending">Ascending</string>
    <string name="audio_file">Audio file</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_service_description">Service to handle unlocking of the app</string>
    <string name="beta_warning">This is a beta version of the app. This means you should not use this app with important files. The developers of this app are not responsible for your data lose or corruption!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="breadcrumb_desc">Here you can change storage.&lt;br/> &lt;small>&lt;i>(E.g.: change to hidden storage)&lt;/i>&lt;/small></string>
    <string name="breadcrumb_title">Change storage</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="canceling">Canceling…</string>
    <string name="change_date_and_time_format_title">Change date and time format</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checksum">Checksum</string>
    <string name="chip_text">Chip text</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="compress">Create zip</string>
    <string name="compress_as">Create zip</string>
    <string name="compressing">Creating zip…</string>
    <string name="confirm_selection">Confirm selection</string>
    <string name="copy_path">Copy path to clipboard</string>
    <string name="copy_to">Copy to</string>
    <string name="decompress">Extract</string>
    <string name="decrypt">Decrypt</string>
    <string name="delete">Delete</string>
    <string name="descending">Descending</string>
    <string name="encrypt">Encrypt</string>
    <string name="extension">Extension</string>
    <string name="feature_media_saving">Create a photo or video to a specified destination.&lt;br/> &lt;small>&lt;i>(E.g.: directly take a media file to hidden storage)&lt;/i>&lt;/small></string>
    <string name="filename">Filename</string>
    <string name="go_to_favorite">Go to favorite</string>
    <string name="go_to_home_folder">Go to home folder</string>
    <string name="hide">Hide</string>
    <string name="intro_encrypting_info_1">Files are encrypted &lt;b>without password&lt;/b> with key saved securely in your device &lt;i>(in the AndroidKeyStore)&lt;/i>.</string>
    <string name="intro_encrypting_info_2">The encryption make possible, that an encrypted files could not be read by an unauthorized person.</string>
    <string name="intro_encrypting_summary">This icon means, that selected files will be encrypted.</string>
    <string name="intro_encrypting_summary2">This icon means, that selected files will be decrypted.</string>
    <string name="intro_encrypting_title">Encrypting files feature</string>
    <string name="intro_encrypting_warning">WARNING: If you uninstall this app, you will not be able to decrypt your encrypted secrets never again!</string>
    <string name="intro_hiding_info">Files in the hidden storage are accessible &lt;b>only&lt;/b> to this app.</string>
    <string name="intro_hiding_summary">This icon means, that selected files will be moved to the hidden storage.</string>
    <string name="intro_hiding_summary2">This icon means, that selected files will be moved from the hidden storage to a selected destination.</string>
    <string name="intro_hiding_title">Hiding files feature</string>
    <string name="intro_hiding_warning">WARNING: If you uninstall this app or clear app storage, you will also remove all your hidden secrets!</string>
    <string name="intro_other_feature_encrypted_zip">Create or extract zip files or &lt;b>encrypted&lt;/b> zip files.</string>
    <string name="intro_other_title">Other features</string>
    <string name="intro_permission_button_permission_text">Allow storage permission</string>
    <string name="intro_permission_button_settings_text">Open app system settings</string>
    <string name="intro_permission_permission_enabled">Storage permission is enabled!</string>
    <string name="intro_permission_summary">This app requires storage permission. Without this permission, the app will be useless.</string>
    <string name="intro_permission_summary2">"If you clicked deny &amp; don't ask again, you can only allow the storage permission from the app system settings."</string>
    <string name="intro_permission_title">Welcome!</string>
    <string name="introduction">Introduction</string>
    <string name="last_modified">Last modified</string>
    <string name="move_to">Move to</string>
    <string name="name">Name</string>
    <string name="open_as">Open as</string>
    <string name="open_with">Open with</string>
    <string name="password">Password</string>
    <string name="password_again_hint">Password verification</string>
    <string name="password_hint">Password</string>
    <string name="path">Path</string>
    <string name="prepend_filenames">Prepend filenames</string>
    <string name="properties">Properties</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="rename">Rename</string>
    <string name="search">Search</string>
    <string name="select_all">Select all</string>
    <string name="set_as">Set as</string>
    <string name="set_as_home_folder">Set as home folder</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="size">Size</string>
    <string name="sort_by">Sort by</string>
    <string name="string_to_add">String to add</string>
    <string name="tutorial">Tutorial</string>
    <string name="unhide">Unhide</string>
    <string name="use_for_this_folder">Use for this folder only</string>
</resources>