<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_vector" android:id="@id/search" android:title="@string/search" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="ifRoom|collapseActionView" />
    <item android:icon="@drawable/ic_home_vector" android:id="@id/go_home" android:title="@string/go_to_home_folder" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_star_on_vector" android:id="@id/go_to_favorite" android:title="@string/go_to_favorite" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_sort_vector" android:id="@id/sort" android:title="@string/sort_by" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_star_off_outline_vector" android:id="@id/add_favorite" android:title="@string/add_to_favorites" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_star_off_vector" android:id="@id/remove_favorite" android:title="@string/remove_from_favorites" app:showAsAction="ifRoom" />
    <item android:id="@id/set_as_home" android:title="@string/set_as_home_folder" app:showAsAction="never" />
    <item android:id="@id/intro" android:title="@string/introduction" app:showAsAction="never" />
    <item android:id="@id/tutorial" android:title="@string/tutorial" app:showAsAction="never" />
    <item android:id="@id/settings" android:title="@string/settings" app:showAsAction="never" />
    <item android:id="@id/about" android:title="@string/about" app:showAsAction="never" />
</menu>
