<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/AppIntroLayoutStyle">
        <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_hiding_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/AppIntroDefaultHeading" />
        <TextView android:id="@id/summary_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_hiding_summary" app:drawableStartCompat="@drawable/ic_hide_vector" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/AppIntroIconText" />
        <TextView android:id="@id/summary2_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_hiding_summary2" app:drawableStartCompat="@drawable/ic_remove_red_eye_vector" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/summary_text" style="@style/AppIntroIconText" />
        <TextView android:id="@id/info_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_hiding_info" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/summary2_text" style="@style/AppIntroInfoText" />
        <TextView android:id="@id/warning_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_hiding_warning" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/info_text" style="@style/AppIntroDangerText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
