<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/AppIntroLayoutStyle">
        <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_encrypting_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/AppIntroDefaultHeading" />
        <TextView android:id="@id/summary_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_encrypting_summary" app:drawableStartCompat="@drawable/ic_lock_vector" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/AppIntroIconText" />
        <TextView android:id="@id/summary2_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_encrypting_summary2" app:drawableStartCompat="@drawable/ic_lock_open_vector" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/summary_text" style="@style/AppIntroIconText" />
        <androidx.fragment.app.FragmentContainerView android:id="@id/settings_encryption" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/summary2_text" />
        <TextView android:id="@id/info_text_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_encrypting_info_1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/settings_encryption" style="@style/AppIntroInfoText" />
        <TextView android:id="@id/info_text_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_encrypting_info_2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/info_text_1" style="@style/AppIntroInfoText" />
        <TextView android:id="@id/warning_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_encrypting_warning" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/info_text_2" style="@style/AppIntroDangerText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
