<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/AppIntroLayoutStyle"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_permission_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/AppIntroDefaultHeading" />
    <TextView android:id="@id/summary_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_permission_summary" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/AppIntroDefaultText" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:layout_gravity="center" android:id="@id/enable_permission_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_margin" android:text="@string/intro_permission_button_permission_text" android:contentDescription="@string/intro_permission_button_permission_text" app:icon="@drawable/ic_folder_open_vector" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.523" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/summary_text" />
    <TextView android:textSize="@dimen/smaller_text_size" android:id="@id/summary2_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_permission_summary2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/enable_permission_button" style="@style/AppIntroDefaultText" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:layout_gravity="center" android:id="@id/system_settings_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_margin" android:text="@string/intro_permission_button_settings_text" android:contentDescription="@string/intro_permission_button_settings_text" app:icon="@drawable/ic_settings_vector" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/summary2_text" />
    <TextView android:textSize="@dimen/extra_big_text_size" android:textStyle="bold" android:textColor="@color/md_green" android:id="@id/permission_enabled_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_permission_permission_enabled" app:drawableTopCompat="@drawable/ic_check_green_big" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/summary_text" style="@style/AppIntroDefaultText" />
</androidx.constraintlayout.widget.ConstraintLayout>
