<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rename_items_holder" android:padding="@dimen/activity_margin" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/normal_text_size" android:id="@id/rename_items_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_margin" android:hint="@string/string_to_add" android:singleLine="true" android:textCursorDrawable="@null" />
    <RadioGroup android:id="@id/rename_items_radio_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/rename_items_value">
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@id/rename_items_radio_append" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/append_filenames" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@id/rename_items_radio_prepend" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/prepend_filenames" />
    </RadioGroup>
</RelativeLayout>
